# simple-sycl-shader

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
